fix z-index of dropdown

--- a/themes/vue/source/css/_header.styl
+++ b/themes/vue/source/css/_header.styl
@@ -5,7 +5,7 @@ $header-height = 40px
   height: $header-height
   padding: $heading-padding-vertical 60px
   position: relative
-  z-index: 2
+  z-index: 100
 
 body.docs
   #header
